# destinypy

./: LICENSE  README.md  TODO  pyproject.toml  setup.py
destinypy/: exceptions.py  groupV2.py  misc.py  queries.py  requester.py  user.py
tests/: getUser.py
