[project]
name = "DestinyPy"
version = "0.1.0"
authors = [
  { name="qwhaty", email="qwhaty@hotmail.com" },
]
description = "A python library for the Bungie.net API"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = ""
"Bug Tracker" = ""